--- a/example.env
+++ b/example.env
@@ -13,3 +13,4 @@ APP_PORT=23000
 APP_PERSISTENT_STORAGE=persistent_storage
 NEXTCLOUD_URL=
 
+VOSK_MODEL_PATH="persistent_storage/vosk-model-en-us-0.22-lgraph"
