port surrounding changes from master branch
Signed-off-by: Anupam Kumar <kyteinsky@gmail.com>

--- a/example.env
+++ b/example.env
@@ -1,7 +1,4 @@
-SIGNALLING_SECRET=
-NC_USER=
-NC_PASS=
-
+# AppAPI environment variables
 AA_VERSION=3.2.0
 APP_SECRET=12345
 APP_ID=live_transcription
@@ -13,4 +10,7 @@ APP_PORT=23000
 APP_PERSISTENT_STORAGE=persistent_storage
 NEXTCLOUD_URL=
 
-VOSK_MODEL_PATH="persistent_storage/vosk-model-en-us-0.22-lgraph"
+LT_HPB_URL="wss://nextcloud.nc.ncweb/standalone-signaling/spreed"
+LT_INTERNAL_SECRET=oompaloompa
+
+#VOSK_MODEL_PATH="persistent_storage/vosk-model-en-us-0.22-lgraph"
