feat: gpu support and separate vosk server
Signed-off-by: Anupam Kumar <kyteinsky@gmail.com>

--- a/example.env
+++ b/example.env
@@ -12,5 +12,6 @@ NEXTCLOUD_URL=
 
 LT_HPB_URL="wss://nextcloud.nc.ncweb/standalone-signaling/spreed"
 LT_INTERNAL_SECRET=oompaloompa
+LT_VOSK_SERVER_URL="ws://localhost:2702"
 
 #VOSK_MODEL_PATH="persistent_storage/vosk-model-en-us-0.22-lgraph"
