--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,10 @@ preview = true
 line-length = 120
 target-version = "py312"
 select = ["A", "B", "C", "D", "E", "F", "G", "I", "S", "SIM", "PIE", "Q", "RET", "RUF", "UP" , "W"]
-extend-ignore = ["D101", "D102", "D103", "D105", "D107", "D203", "D213", "D401", "I001", "RUF100", "D400", "D415", "W191"]
+extend-ignore = ["D100", "D101", "D102", "D103", "D105", "D107", "D203", "D213", "D401", "E402", "I001", "RUF100", "D400", "D415", "W191"]
+
+[tool.ruff.lint.mccabe]
+max-complexity = 12
 
 [tool.isort]
 profile = "black"
