add LT_MAX_WORKERS env var
Signed-off-by: Anupam Kumar <kyteinsky@gmail.com>

--- a/example.env
+++ b/example.env
@@ -14,3 +14,4 @@ LT_HPB_URL="wss://nextcloud.nc.ncweb/standalone-signaling/spreed"
 LT_INTERNAL_SECRET=oompaloompa
 LT_VOSK_SERVER_URL="ws://localhost:2702"
 SKIP_CERT_VERIFY=False
+LT_MAX_WORKERS=20
