update readme and some papercuts
also remove the hpb submodule

Signed-off-by: Anupam Kumar <kyteinsky@gmail.com>

--- a/example.env
+++ b/example.env
@@ -9,9 +9,11 @@ APP_HOST=0.0.0.0
 APP_PORT=23000
 APP_PERSISTENT_STORAGE=persistent_storage
 NEXTCLOUD_URL=
+COMPUTE_DEVICE=CPU
 
 LT_HPB_URL="wss://nextcloud.nc.ncweb/standalone-signaling/spreed"
 LT_INTERNAL_SECRET=oompaloompa
 LT_VOSK_SERVER_URL="ws://localhost:2702"
-SKIP_CERT_VERIFY=False
+LT_DISABLE_INTERNAL_VOSK=false
+SKIP_CERT_VERIFY=false
 LT_MAX_WORKERS=20
