update Dockerfile and Makefile
Signed-off-by: Anupam Kumar <kyteinsky@gmail.com>

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -20,7 +20,7 @@ autostart=true
 autorestart=true
 startsecs=60
 directory=/ex_app/lib
-command=python3 -u /ex_app/lib/main.py
+command=/venv/bin/python3 -u /ex_app/lib/main.py
 
 [program:vosk_server]
 stdout_logfile=/dev/stdout
@@ -31,5 +31,5 @@ autostart=true
 autorestart=true
 startsecs=60
 directory=/ex_app/lib
-command=python3 /ex_app/lib/vosk_server.py
+command=/venv/bin/python3 /ex_app/lib/vosk_server.py
 
