--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,9 @@ nc_py_api
 print_color
 pydantic
 ruamel.yaml
+srt
+# no pypi release since a long time
+supervisor @ git+https://github.com/Supervisor/supervisor.git@7b4190831a5162f5b26a72a039770ad4dfb5f6a2
 uvicorn
 vosk
 websockets
