add gh actions and reuse compliance
Signed-off-by: Anupam Kumar <kyteinsky@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
+# SPDX-FileCopyrightText: 2025 Nextcloud GmbH and Nextcloud contributors
+# SPDX-License-Identifier: AGPL-3.0-or-later
 .idea/
 .vscode/
 .venv/
 persistent_storage/
 .env
 __pycache__/
+.dmypy.json
