--- a/example.env
+++ b/example.env
@@ -1,3 +1,8 @@
+# SPDX-FileCopyrightText: 2023 Nextcloud GmbH and Nextcloud contributors
+# SPDX-License-Identifier: AGPL-3.0-or-later
+#
+# copy this file as .env
+
 # AppAPI environment variables
 AA_VERSION=3.2.0
 APP_SECRET=12345
