--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,10 @@
-[tool.black]
-line-length = 120
-target-versions = ["py312"]
-preview = true
-
+# SPDX-FileCopyrightText: 2025 Nextcloud GmbH and Nextcloud contributors
+# SPDX-License-Identifier: AGPL-3.0-or-later
 [tool.ruff]
 line-length = 120
 target-version = "py312"
+
+[tool.ruff.lint]
 select = ["A", "B", "C", "D", "E", "F", "G", "I", "S", "SIM", "PIE", "Q", "RET", "RUF", "UP" , "W"]
 extend-ignore = ["D100", "D101", "D102", "D103", "D105", "D107", "D203", "D213", "D401", "E402", "I001", "RUF100", "D400", "D415", "W191"]
 
