--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2025 Nextcloud GmbH and Nextcloud contributors
+# SPDX-License-Identifier: AGPL-3.0-or-later
+
 [supervisord]
 nodaemon=true
 logfile=/var/log/supervisor/supervisord.log
@@ -32,4 +35,3 @@ autorestart=true
 startsecs=60
 directory=/ex_app/lib
 command=/venv/bin/python3 /ex_app/lib/vosk_server.py
-
