--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 # SPDX-FileCopyrightText: 2025 Nextcloud GmbH and Nextcloud contributors
 # SPDX-License-Identifier: AGPL-3.0-or-later
 ci:
-  skip: [ pylint, mypy ]
+  skip: [ mypy ]
 
 exclude: '^ex_app/(img|js)/|.*\.phar'
 repos:
