fix: pre-commit issues
Signed-off-by: Anupam Kumar <kyteinsky@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ max-complexity = 12
 
 [tool.isort]
 profile = "black"
+indent = "tab"
+line_length = 120
 
 [tool.pylint]
 master.py-version = "3.11"
