--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,7 +6,7 @@ nodaemon=true
 logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 childlogdir=/var/log/supervisor
-logfile_maxbytes=50MB
+logfile_maxbytes=10MB
 logfile_backups=10
 loglevel=error
 user=root
@@ -20,7 +20,7 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autostart=true
-autorestart=true
+autorestart=unexpected
 startsecs=60
 directory=/ex_app/lib
 command=/venv/bin/python3 -u /ex_app/lib/main.py
@@ -31,7 +31,8 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autostart=true
-autorestart=true
-startsecs=60
+autorestart=unexpected
+exitcodes=0
+startsecs=0
 directory=/ex_app/lib
 command=/venv/bin/python3 /ex_app/lib/vosk_server.py
