chore: switch to relative imports
Signed-off-by: Anupam Kumar <kyteinsky@gmail.com>

--- a/logger_config.yaml
+++ b/logger_config.yaml
@@ -13,7 +13,7 @@ formatters:
     datefmt: '%Y-%m-%dT%H:%M:%S%z'
 
   json:
-    (): logger.JSONFormatter
+    (): ex_app.lib.logger.JSONFormatter
     fmt_keys:
       timestamp: timestamp
       level: levelname
