--- a/supervisord.conf
+++ b/supervisord.conf
@@ -23,7 +23,7 @@ autostart=true
 autorestart=unexpected
 startsecs=60
 directory=/ex_app/lib
-command=/venv/bin/python3 -u /ex_app/lib/main.py
+command=/venv/bin/python3 -m ex_app.lib
 
 [program:vosk_server]
 stdout_logfile=/dev/stdout
@@ -35,4 +35,4 @@ autorestart=unexpected
 exitcodes=0
 startsecs=0
 directory=/ex_app/lib
-command=/venv/bin/python3 /ex_app/lib/vosk_server.py
+command=/venv/bin/python3 -m ex_app.lib.vosk_server
