--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ extend-ignore = ["D100", "D101", "D102", "D103", "D105", "D107", "D203", "D213",
 [tool.ruff.lint.mccabe]
 max-complexity = 12
 
+# allow assert in tests
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = ["S101"]
+
 [tool.isort]
 profile = "black"
 indent = "tab"
