--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ av
 dotenv
 huggingface_hub
 # pin it to the version before niquests
-nc_py_api==0.20.2
+nc_py_api
+niquests
 print_color
 pydantic
 ruamel.yaml
